# DAC-healthprice-backend

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  DAC-healthprice-backend.code-workspace  ETL_PIPELINE_DESIGN.md  render.yaml  requirements-api.txt  requirements.txt  test_calibration_engine.py  test_etl_pipeline.py
analytics/: __init__.py  advanced_monitor.py  monitor.py  monitor_store.py
api/: __init__.py  crud.py  database.py  db_models.py  deps.py  main.py  models.py
app/: DAC-healthprice-backend.code-workspace  __init__.py  main.py  pyproject.toml
app/auto/: __init__.py  fairness.py  models.py  streaming_model.py
app/data/: __init__.py  features.py  health_features.py  health_validation.py  validation.py
app/feedback/: __init__.py  claims.py  metrics.py
app/governance/: __init__.py
app/ml/: __init__.py  inference.py  train_model.py
app/monitoring/: __init__.py  monitor.py
app/pricing_engine/: __init__.py  escalation_calculator.py  final_pricing.py  glm_pricing.py  health_pricing.py
app/rl/: underwriting_bandit.py
app/rl/data/: cambodia_cache.pkl  cambodia_dataset.csv
app/rl/models/: cambodia_health_xgb.pkl  cambodia_life_xgb.pkl
app/routes/: auto_pricing.py  bandit_underwriting.py  escalation.py  health_pricing.py  health_pricing_v2_compat.py  life_pricing.py  vietnam_pricing.py
case-study/: generate_vietnam_dataset.py
case_study/: generate_vietnam_dataset.py  run_pipeline.py  train_vietnam_models.py  vietnam_dataset.csv
data/: synthetic_portfolio.parquet
etl/: __init__.py  config.py  fetch.py  pipeline.py  storage.py  validate.py
(+163 files in other folders)
